2007-08-20  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_roster.erl: Don't send roster push when unsubscribing in
	"None + Pending In" state
	* src/mod_roster_odbc.erl: Likewise

	* src/mod_offline.erl: Renamed MAX_OFFLINE_MSGS to MaxOfflineMsgs

	* src/odbc/ejabberd_odbc_sup.erl: Add an odbc_pool_size config
	file option to choose the number of SQL connection in each pool
	(EJAB-58) (thanks to Jerome Sautret)
	* src/odbc/ejabberd_odbc.erl: Likewise

2007-08-13  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_offline.erl: Added a config option to define the maximum
	number of offline messages per user (EJAB-314).

	* doc/guide.tex: Added documentation for the mod_offline quota
	(EJAB-314).

	* doc/guide.tex: Remove release notes (EJAB-323).

	* src/mod_offline.erl: Returns an error message to sender when
	message is discarded due to quota (EJAB-314).
	
2007-08-12  Mickael Remond  <mickael.remond@process-one.net>

	* src/odbc/ejabberd_odbc.erl: UTF-8 support for MySQL5 (EJAB-318).

2007-08-09  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Minor update (thanks to Sergei Golovan)

2007-08-08  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_offline.erl: Only count messages if a quota has been
	actually set (EJAB-314).
	* src/p1_mnesia.erl: Minor coding style change.

2007-08-07  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_offline.erl: Started implementation of mod_offline
	quota. For now, it require change in code. Will be turn into a
	config file parameter soon. (EJAB-314).
	* src/p1_mnesia.erl: Added memory efficient record count in
	Mnesia.

2007-08-03  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_announce.erl: Added support to all the announce features
	described in documentation. Access to all announce features
	through command line, adhoc commands and disco (Thanks to
	Badlop) (EJAB-18).
	* src/gen_mod.erl: Likewise.
	* doc/guide.tex: Likewise.
